--- a/App/src/Pages/HomePage/Components/EditItem/style.scss
+++ b/App/src/Pages/HomePage/Components/EditItem/style.scss
@@ -6,9 +6,9 @@
  */
 /* <------------------------------------ **** CONSTANT IMPORT START **** ------------------------------------ */
 /** Import all the reference constant after this line */
-@import '../../Constant/breakPoint.scss';
-@import '../../Constant/font.scss';
-@import '../../Constant/color.scss';
+@import '../../../../Constant/breakPoint.scss';
+@import '../../../../Constant/font.scss';
+@import '../../../../Constant/color.scss';
 /* <------------------------------------ **** CONSTANT IMPORT END **** ------------------------------------ */
 /* <------------------------------------ **** SECTION1 MIXIN START **** ------------------------------------ */
 /** The demo mixin is ..........*/
