:art: update code name

--- a/App/src/Pages/HomePage/Components/EditItem/style.scss
+++ b/App/src/Pages/HomePage/Components/EditItem/style.scss
@@ -12,11 +12,8 @@
 /* <------------------------------------ **** CONSTANT IMPORT END **** ------------------------------------ */
 /* <------------------------------------ **** SECTION1 MIXIN START **** ------------------------------------ */
 /** The demo mixin is ..........*/
-@mixin demo {}
+@mixin demo {
+}
 /* <------------------------------------ **** SECTION1 MIXIN END **** ------------------------------------ */
 /* <--------------------------- * SECTION1 * --------------------------- */
 /* <--------------------------- * SECTION1 * --------------------------- */
-
-.li_selected {
-    background-color: $gray;
-}
