--- a/App/src/Pages/HomePage/style.scss
+++ b/App/src/Pages/HomePage/style.scss
@@ -12,11 +12,12 @@
 /* <------------------------------------ **** CONSTANT IMPORT END **** ------------------------------------ */
 /* <------------------------------------ **** SECTION1 MIXIN START **** ------------------------------------ */
 /** The demo mixin is ..........*/
-@mixin demo {}
+@mixin demo {
+}
 /* <------------------------------------ **** SECTION1 MIXIN END **** ------------------------------------ */
 /* <--------------------------- * SECTION1 * --------------------------- */
-/* <--------------------------- * SECTION1 * --------------------------- */
 
-.li_selected {
+.editItem_select {
     background-color: $gray;
 }
+/* <--------------------------- * SECTION1 * --------------------------- */
