--- a/App/src/Route/style.scss
+++ b/App/src/Route/style.scss
@@ -7,6 +7,7 @@
 @import '../Constant/color.scss';
 @import '../Constant/font.scss';
 @import '../Constant/breakPoint.scss';
+@import '~antd/dist/antd.css';
 
 .loadingWrapper {
     height: 100vh;
